Fixed capturepoints not displayed upon startup